adjust ch5 for wildfly 26